DesignProject/tests/error/test12.src
// duplicate parameter names
func duplicateParams(a : integer, a : integer) -> integer {  // error: duplicate parameter 'a'
    return(a + a);
}

